# hello_world_solana

./: Cargo.toml  my-keypair.json  readme.md
src/: client.rs  client_with_logs.rs  lib.rs
