[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17.0"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
log = "0.4"
env_logger = "0.10"
solana-transaction-status = "1.18.26" 

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_with_logs"
path = "src/client_with_logs.rs"


